# pg-dtw

./: .gitignore  CMakeLists.txt  README.md  docker-compose.yml
bench/: README.md
bench/sql/: bench_distance.sql
cmake/: PgDtwExtension.cmake
docker/: Dockerfile.pg15  Dockerfile.pg16  Dockerfile.pg17
docs/: algorithm-design.md  architecture.md  math-notes.md  performance.md  planner-index-design.md  roadmap.md  sql-api.md  testing.md
examples/: rowset_patterns.sql
include/pg_dtw/: canonicalize.h  dtw.h  errors.h  options.h  types.h
sql/: pg_dtw--0.0.1.sql  pg_dtw.control.in
src/: array_input.c  canonicalize.c  dtw_kernel.c  lower_bounds.c  normalize.c  options.c  pg_dtw.c
test/: run_pg_matrix.sh  run_pg_regress.py  run_pg_regress.sh
test/expected/: pg_dtw_core.out
test/fuzz/: fuzz_dtw.c  reference_dtw.c
test/pgtap/: pg_dtw_api.sql
test/sql/: pg_dtw_core.sql
tools/: README.md  common.py  env_probe.py  run_docker.py  run_matrix.py  run_native.py
